--- a/student-admissions-keras/StudentAdmissionsKeras.ipynb
+++ b/student-admissions-keras/StudentAdmissionsKeras.ipynb
@@ -27,17 +27,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -719,24 +719,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.775   0.7675  0.      1.      0.      0.    ]\n",
-      " [ 0.85    0.77    0.      0.      0.      1.    ]\n",
-      " [ 0.7     0.63    0.      1.      0.      0.    ]\n",
-      " [ 0.55    0.7875  0.      1.      0.      0.    ]\n",
-      " [ 0.95    1.      1.      0.      0.      0.    ]\n",
-      " [ 0.825   0.97    0.      1.      0.      0.    ]\n",
-      " [ 0.75    0.905   0.      0.      1.      0.    ]\n",
-      " [ 0.8     0.7975  0.      0.      0.      1.    ]\n",
-      " [ 0.725   0.8925  0.      0.      1.      0.    ]\n",
-      " [ 0.5     0.7625  0.      1.      0.      0.    ]]\n",
-      "[[ 1.  0.]\n",
+      "[[ 1.      0.915   1.      0.      0.      0.    ]\n",
+      " [ 0.575   0.9425  0.      0.      1.      0.    ]\n",
+      " [ 0.7     0.7375  0.      1.      0.      0.    ]\n",
+      " [ 0.475   0.8575  0.      0.      1.      0.    ]\n",
+      " [ 0.9     0.875   0.      0.      1.      0.    ]\n",
+      " [ 0.85    0.925   0.      1.      0.      0.    ]\n",
+      " [ 0.7     0.8325  0.      0.      0.      1.    ]\n",
+      " [ 0.65    0.8225  1.      0.      0.      0.    ]\n",
+      " [ 0.8     0.875   0.      1.      0.      0.    ]\n",
+      " [ 0.725   0.85    0.      0.      0.      1.    ]]\n",
+      "[[ 0.  1.]\n",
       " [ 1.  0.]\n",
       " [ 1.  0.]\n",
       " [ 1.  0.]\n",
       " [ 0.  1.]\n",
-      " [ 0.  1.]\n",
       " [ 1.  0.]\n",
-      " [ 0.  1.]\n",
+      " [ 1.  0.]\n",
+      " [ 1.  0.]\n",
       " [ 1.  0.]\n",
       " [ 1.  0.]]\n"
      ]
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -776,15 +776,15 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_1 (Dense)              (None, 128)               896       \n",
+      "dense_7 (Dense)              (None, 128)               896       \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 128)               0         \n",
+      "dropout_5 (Dropout)          (None, 128)               0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 64)                8256      \n",
+      "dense_8 (Dense)              (None, 64)                8256      \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 64)                0         \n",
+      "dropout_6 (Dropout)          (None, 64)                0         \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 2)                 130       \n",
+      "dense_9 (Dense)              (None, 2)                 130       \n",
       "=================================================================\n",
       "Total params: 9,282\n",
       "Trainable params: 9,282\n",
@@ -810,7 +810,7 @@
     "model.add(Dense(2, activation='softmax'))\n",
     "\n",
     "# Compiling the model\n",
-    "model.compile(loss = 'categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "model.compile(loss = 'mean_squared_error', optimizer='adam', metrics=['accuracy'])\n",
     "model.summary()"
    ]
   },
@@ -823,23 +823,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f10c79d25c0>"
+       "<keras.callbacks.History at 0x18222e2ef0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Training the model\n",
-    "model.fit(features, targets, epochs=200, batch_size=100, verbose=0)"
+    "model.fit(features, targets, epochs=2000, batch_size=100, verbose=0)"
    ]
   },
   {
@@ -851,17 +851,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 32/360 [=>............................] - ETA: 0s\n",
-      " Training Accuracy: 0.722222222222\n",
-      "32/40 [=======================>......] - ETA: 0s\n",
-      " Testing Accuracy: 0.575\n"
+      "360/360 [==============================] - 0s 24us/step\n",
+      "\n",
+      " Training Accuracy: 0.777777777778\n",
+      "40/40 [==============================] - 0s 115us/step\n",
+      "\n",
+      " Testing Accuracy: 0.725\n"
      ]
     }
    ],
@@ -897,7 +899,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -911,7 +913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
